@@ -1,10 +1,12 @@
 Changes
 lib/Test/Text.pm
+lib/Text/Sentence.pm
 Makefile.PL
 MANIFEST			This list of files
 README.md
 t/00.load.t
 t/01.spell.t
+t/011-split-sentences.t
 t/02.just_check.t
 text/en/words.dic
 text/en/text.md
