@@ -11,7 +11,7 @@ use Text::Hunspell;
 use Text::Sentence qw(split_sentences);
 use v5.12;
 
-use version; our $VERSION = qv('0.6.0'); # Works with UTF8
+use version; our $VERSION = qv('0.6.0'); # Works with UTF8 and includes Text::Sentence
 
 use base 'Test::Builder::Module'; # Included in Test::Simple
 
